--- a/public/css/jass-game.css
+++ b/public/css/jass-game.css
@@ -7,6 +7,33 @@ html, body {
     color: white;
 }
 
+#modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1a1a1a;
+    opacity: 0.5;
+    z-index: 999;
+}
+
+#dialog {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #1a1a1a;
+    opacity: 0.9;
+    color: white;
+    padding: 20px;
+    border: 1px solid darkgray;
+    border-radius: 5px;
+    box-shadow: #1a1a1a 0 0 10px;
+    z-index: 1000;
+    width: 700px;
+}
+
 #container {
     display: flex;
 }
@@ -146,7 +173,6 @@ div.left-trick-card {
 
 #scoreboard {
     width: 300px;
-    /*height: 850px;*/
     background-color: #1a1a1a;
     color: white;
     border: 1px solid darkgray;
@@ -166,6 +192,11 @@ div.left-trick-card {
     text-align: center;
     font-size: 1.2em;
     margin-bottom: 10px;
+    color: darkgray;
+}
+
+.lead {
+    font-weight: bold;
     color: darkgray;
 }
 
@@ -203,7 +234,7 @@ div.team-details {
 
 .human {
     font-weight: bold;
-    color: #646cff;
+    color: #095f67;
 }
 
 #round {
@@ -228,7 +259,36 @@ div.team-details {
 
 #trump .trump-suit {
     font-size: 2em;
-    color: #646cff;
+    color: #095f67;
+}
+
+.melds {
+}
+
+.meld {
+    display: flex;
+}
+
+.meld-highest-card {
+    width: 50px;
+}
+
+.meld-player {
+    color: dimgray;
+    margin-left: 5px;
+    width: 100px;
+}
+
+.meld-type {
+    color: lightgray;
+    margin-left: 5px;
+    width: 100px;
+}
+
+.meld-points {
+    margin-left: 5px;
+    color: dimgrey;
+    width: 50px;
 }
 
 #trick {
@@ -290,6 +350,13 @@ div.card-rotated {
     margin: 1px 0;
 }
 
+img.card-image-small {
+    width: 30px;
+    height: 45px;
+    box-shadow: #1a1a1a 0 0 10px;
+    border-radius: 2px;
+}
+
 img.card-image {
     width: 70px;
     height: 100px;
@@ -319,3 +386,39 @@ div.card-cover {
     border-radius: 2px;
 }
 
+
+#trumpDecision {
+}
+
+.trump-decision-info {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.trump-decision-suits {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.trump-decision-suit {
+    cursor: pointer;
+}
+
+.trump-decision-pass {
+    text-align: center;
+}
+
+button.pass-button {
+    cursor: pointer;
+}
+
+.trump-decision-hand {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 10px;
+}
