--- a/public/css/jass-game.css
+++ b/public/css/jass-game.css
@@ -39,7 +39,7 @@ html, body {
 }
 
 #baize {
-    background-image: url("/images/dark-green-wall.jpg");
+    background-image: url("../images/dark-green-wall.jpg");
     width: 900px;
     height: 900px;
     line-height: 0;
